--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,8 +40,7 @@
         "./src/*"
       ]
     },
-    "plugins": [
-    ]
+    "plugins": []
   },
   "include": [
     "src/**/*",
@@ -51,5 +50,6 @@
   "exclude": [
     "node_modules",
     "packages"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
