--- a/package.json
+++ b/package.json
@@ -4,58 +4,36 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx src/server.ts",
     "build": "rollup --config rollup.config.mjs",
-    "babel": "babel src -d lib --extensions .ts,.tsx,.js,.jsx,.cjs,.mjs"
+    "vite": "vite"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/core": "^11.0.0",
-    "@emotion/css": "^11.13.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.0.2",
     "@pnnh/atom": "0.4.0",
     "@pnnh/atom-react": "0.2.0",
-    "@scure/base": "^1.1.6",
-    "@stylexjs/stylex": "^0.7.5",
     "base64url": "^3.0.1",
     "cors": "^2.8.5",
-    "expo": "^51.0.32",
-    "express": "^4.19.2",
+    "express": "5.0.0",
     "html": "^1.0.0",
     "i18next": "^23.14.0",
     "ignore": "^5.3.1",
+    "jsbarcode": "^3.11.6",
     "lodash": "^4.17.21",
-    "md5": "^2.3.0",
-    "mime-types": "^2.1.35",
-    "moment": "^2.30.1",
-    "negotiator": "^0.6.3",
     "parse-uri": "^1.0.9",
     "pluralize": "^8.0.0",
     "prop-types": "^15.8.1",
+    "qrcode": "^1.5.4",
     "qs": "^6.12.1",
     "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-cookie": "^7.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^15.0.1",
-    "react-native": "0.74.5",
-    "react-native-web": "~0.19.10",
-    "react-router-dom": "^6.26.1",
-    "react-strict-dom": "^0.0.26",
+    "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
-    "remixicon": "^4.2.0",
     "rfc4648": "^1.5.3",
     "router": "^1.3.8",
     "sharp": "^0.33.4",
     "strip-ansi": "^7.1.0",
-    "supports-color": "^8.1.1",
-    "swr": "^2.2.5",
-    "urlpattern-polyfill": "^10.0.0",
-    "uuid": "^10.0.0",
-    "validator": "^13.12.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "supports-color": "^8.1.1"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.0",
@@ -67,8 +45,6 @@
     "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@stylexjs/babel-plugin": "^0.7.5",
-    "@stylexjs/rollup-plugin": "^0.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/html": "^1.0.4",
@@ -79,20 +55,22 @@
     "@types/parse-uri": "^1.0.2",
     "@types/prismjs": "^1.26.4",
     "@types/prop-types": "^15.7.12",
+    "@types/qrcode": "^1.5.5",
     "@types/qs": "^6.9.15",
     "@types/react": "~18.2.79",
     "@types/react-dom": "~18.2.25",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.10",
-    "rollup": "^4.21.0",
+    "rollup": "4.22.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-visualizer": "^5.5.0",
     "rollup-preserve-directives": "^1.1.1",
-    "tslib": "^2.7.0",
+    "tslib": "^2.8.0",
     "tsx": "^4.11.0",
     "typescript": "~5.3.3",
+    "vite": "^5.4.10",
     "zx": "^8.1.5"
   }
 }
