--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-visualizer": "^5.5.0",
     "rollup-preserve-directives": "^1.1.1",
+    "sass-embedded": "^1.80.4",
     "tslib": "^2.8.0",
     "tsx": "^4.11.0",
     "typescript": "~5.3.3",
