将项目形式调整为nextjs结构以方便seo 处理nextjs多语言配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "noEmit": true,
     "emitDeclarationOnly": true,
     "allowJs": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "incremental": true,
     "esModuleInterop": true,
     "strict": true,
@@ -40,12 +40,17 @@
         "./src/*"
       ]
     },
-    "plugins": []
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "src/**/*",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/**/*",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
