--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "polaris-cloud",
   "version": "0.1.0",
   "scripts": {
-    "dev": "NODE_ENV=development tsx src/server.ts",
-    "build": "rollup --config rollup.config.mjs",
-    "vite": "vite"
+    "vite": "vite",
+    "dev": "next dev -p 8010",
+    "build": "NODE_ENV=production next build",
+    "start": "next start"
   },
   "dependencies": {
     "@pnnh/atom": "0.4.0",
     "@pnnh/atom-react": "0.2.0",
+    "accept-language": "^3.0.20",
     "base64url": "^3.0.1",
     "cors": "^2.8.5",
-    "express": "5.0.0",
     "html": "^1.0.0",
     "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-locize-backend": "^6.5.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "ignore": "^5.3.1",
     "jsbarcode": "^3.11.6",
     "lodash": "^4.17.21",
+    "next": "15.0.1",
+    "next-i18next": "^15.3.1",
     "parse-uri": "^1.0.9",
     "pluralize": "^8.0.0",
     "prop-types": "^15.8.1",
@@ -33,20 +39,12 @@
     "router": "^1.3.8",
     "sharp": "^0.33.4",
     "strip-ansi": "^7.1.0",
-    "supports-color": "^8.1.1"
+    "supports-color": "^8.1.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.1.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.7",
-    "@rollup/plugin-strip": "^3.0.4",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@pnnh/galaxy-client": "0.1.4",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/html": "^1.0.4",
     "@types/lodash": "^4.17.5",
     "@types/md5": "^2.3.5",
@@ -61,17 +59,9 @@
     "@types/react-dom": "~18.2.25",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.11.10",
-    "rollup": "4.22.4",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-visualizer": "^5.5.0",
-    "rollup-preserve-directives": "^1.1.1",
-    "sass-embedded": "^1.80.4",
+    "sass": "^1.80.4",
     "tslib": "^2.8.0",
-    "tsx": "^4.11.0",
     "typescript": "~5.3.3",
-    "vite": "^5.4.10",
     "zx": "^8.1.5"
   }
 }
