移除无关代码 设置包为私有以免被不小心提交

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "polaris-cloud",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "vite": "vite",
     "dev": "next dev -p 8010",
